The most usefull tefgs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,39 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Hello guys!</p>
+    <h1>Hello World!!!</h1>
+    <!-- всего 1 Аш1, 2 шт. аш2 -->
+
+    <!-- lorem*6 - это 6 строк -->
+    <!-- loremru5 - пять строк на русском -->
+
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error
+      perspiciatis neque excepturi voluptas temporibus? Consequuntur tenetur
+      molestiae nulla laudantium quo esse. Quod qui voluptatum itaque molestiae
+    </p>
+
+    <div></div>
+    <span></span>
+
+    <!-- только с блоками на странице, не бывает отдельно -->
+    <section></section>
+
+    <!-- самостоятельная часть - артикл -->
+    <article></article>
+
+    <!-- нумерованный, упорядоченный -->
+    <ol>
+      <li>Kyiv</li>
+      <li>Poltava</li>
+      <li>Lviv</li>
+    </ol>
+
+    <!-- неупорядоченый список -->
+    <ul>
+      <li>Paris</li>
+      <li>Monaco</li>
+      <li>Liverpool</li>
+    </ul>
   </body>
 </html>
