--- a/index.html
+++ b/index.html
@@ -6,39 +6,61 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World!!!</h1>
-    <!-- всего 1 Аш1, 2 шт. аш2 -->
+    <!-- щапка сайта -->
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">Page1</a></li>
+          <li><a href="#">Page2</a></li>
+          <li><a href="#">Page3</a></li>
+          <li><a href="#">Page4</a></li>
+          <li><a href="#">Page5</a></li>
+        </ul>
 
-    <!-- lorem*6 - это 6 строк -->
-    <!-- loremru5 - пять строк на русском -->
+        <!-- второй вариант указания меню -->
+        <menu type="content">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </menu>
+      </nav>
+    </header>
 
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error
-      perspiciatis neque excepturi voluptas temporibus? Consequuntur tenetur
-      molestiae nulla laudantium quo esse. Quod qui voluptatum itaque molestiae
-    </p>
+    <!-- основной контент сайта -->
+    <main>
+      <section></section>
+      <article></article>
+      <aside></aside>
+    </main>
 
-    <div></div>
-    <span></span>
+    <!-- подвал сайта -->
+    <footer></footer>
 
-    <!-- только с блоками на странице, не бывает отдельно -->
-    <section></section>
+    <a href="https://ninjamock.com/" target="_blank">Web site</a>
 
-    <!-- самостоятельная часть - артикл -->
-    <article></article>
+    <br />
 
-    <!-- нумерованный, упорядоченный -->
-    <ol>
-      <li>Kyiv</li>
-      <li>Poltava</li>
-      <li>Lviv</li>
-    </ol>
+    <!-- абсолютный путь к файлу -->
+    <img
+      src="https://images.pexels.com/photos/4818188/pexels-photo-4818188.jpeg"
+      alt=""
+      width="500"
+    />
 
-    <!-- неупорядоченый список -->
-    <ul>
-      <li>Paris</li>
-      <li>Monaco</li>
-      <li>Liverpool</li>
-    </ul>
+    <br />
+    <!-- относительынй путь к файлу -->
+    <img src="./pictures/pic.jpeg" alt="aircraft" width="500" />
+
+    <!-- блочный элемент -->
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <hr />
+
+    <!-- строчный элемент span a img-->
+    <span>1</span>
+    <span>2</span>
+    <span>3</span>
   </body>
 </html>
