--- a/index.html
+++ b/index.html
@@ -1,66 +1,231 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>BarberShop</title>
   </head>
+  <!-- Разметка барбер шопа -->
   <body>
-    <!-- щапка сайта -->
     <header>
       <nav>
         <ul>
-          <li><a href="#">Page1</a></li>
-          <li><a href="#">Page2</a></li>
-          <li><a href="#">Page3</a></li>
-          <li><a href="#">Page4</a></li>
-          <li><a href="#">Page5</a></li>
+          <li><a href="#">О нас</a></li>
+          <li><a href="#">Услуги и цены</a></li>
+          <li><a href="#">Мастера</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
-
-        <!-- второй вариант указания меню -->
-        <menu type="content">
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </menu>
       </nav>
+
+      <address>
+        <a href="tel:+11111111">+11111111</a>
+      </address>
+
+      <a href="#">Онлайн запись</a>
     </header>
 
-    <!-- основной контент сайта -->
     <main>
-      <section></section>
-      <article></article>
-      <aside></aside>
+      <section>
+        <span>A hair salon for men in Kyiv</span>
+        <h1>BarberShop</h1>
+        <p>
+          Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со
+          вкусом.
+        </p>
+      </section>
+      <!-- о нас -->
+      <section>
+        <div>
+          <img
+            src="./pictures/img1.jpg"
+            alt="Мажет пеной"
+            width="270"
+            height="445"
+          />
+          <img
+            src="./pictures/img2.jpg"
+            alt="Бреет затылок"
+            width="270"
+            height="445"
+          />
+        </div>
+        <div>
+          <span>О НАС</span>
+          <h3>Лучший Барбершоп твоего города</h3>
+          <p>
+            Если ты хочешь добавить в свой образ больше уверенности – тебе точно
+            к нам.
+          </p>
+          <p>
+            Мы команда, которая никогда не останавливается на достигнутом и
+            жаждет перемен. И когда ты попадешь в руки нашего мастера, то уже
+            никогда не сможешь быть прежним. Мы команда, которая всегда с
+            клиентами "на одной волне". Поэтому, мы всегда готовы
+            усовершенствовать каждого, кто к нам приходит!
+          </p>
+          <a href="#">онлайн-запись</a>
+        </div>
+      </section>
+      <!-- Услуги цены -->
+      <section>
+        <span>Проведи время в компании лучших мастеров</span>
+
+        <h3>Услуги и цены</h3>
+        <ul>
+          <li>Мужская стрижка от 300 грн.</li>
+          <li>Стрижка бороды от 300 грн.</li>
+          <li>Стрижка усов от 300 грн.</li>
+          <li>Бритье опасной бритвой от 300 грн.</li>
+          <li>Мужская стрижка от 300 грн.</li>
+          <li>Стрижка бороды от 300 грн.</li>
+          <li>Стрижка усов от 300 грн.</li>
+          <li>Бритье опасной бритвой от 300 грн.</li>
+        </ul>
+
+        <a href="#">онлайн-запись</a>
+      </section>
+
+      <!-- Почему приходя к нам -->
+      <section>
+        <ul>
+          <li>200 <br />Lorem, ipsum.</li>
+          <li>200 <br />Lorem, ipsum.</li>
+          <li>200 <br />Lorem, ipsum.</li>
+          <li>200 <br />Lorem, ipsum.</li>
+        </ul>
+
+        <div>
+          <span>старая традиционная школа</span>
+          <h3>Почему приходят именно к нам?</h3>
+          <p>
+            О нас говорят только хорошее. Но лучше 1 раз увидеть и
+            прочувствовать, чем 10 раз прочитать.
+          </p>
+        </div>
+      </section>
+
+      <!-- Наши мастера -->
+      <section>
+        <span>для настоящих ценителей атмосферы</span>
+        <h3>Наши мастера</h3>
+        <ul>
+          <li>
+            <img
+              src="./pictures/photo1.jpg"
+              alt="John Smith"
+              width="370"
+              height="346"
+            />
+            <p>John Smith</p>
+            <p>Extreme Barber</p>
+
+            <!-- значки юникода -->
+            <ul>
+              <li>&#9055;</li>
+              <li>&#9055;</li>
+              <li>&#9055;</li>
+              <li>&#9055;</li>
+            </ul>
+          </li>
+          <li>
+            <img
+              src="./pictures/photo2.jpg"
+              alt="Michele Doe"
+              width="370"
+              height="346"
+            />
+            <p>Michele Doe</p>
+            <p>Extreme Barber</p>
+            <!-- значки юникода -->
+            <ul>
+              <li>&#9055;</li>
+              <li>&#9055;</li>
+              <li>&#9055;</li>
+              <li>&#9055;</li>
+            </ul>
+          </li>
+          <li>
+            <img
+              src="./pictures/photo3.jpg"
+              alt="Alan Black"
+              width="370"
+              height="346"
+            />
+            <p>Alan Black</p>
+            <p>Extreme Barber</p>
+            <!-- значки юникода -->
+            <ul>
+              <li>&#9055;</li>
+              <li>&#9055;</li>
+              <li>&#9055;</li>
+              <li>&#9055;</li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+
+      <!-- На латинском языке ДОДЕЛАТЬ-->
+      <section>
+        <span>На латинском языке “барба” означает “борода”</span>
+        <ul>
+          <li>
+            <img
+              src="./pictures/working1.jpg"
+              alt=""
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./pictures/working2.jpg"
+              alt=""
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./pictures/working3.jpg"
+              alt=""
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./pictures/working4.jpg"
+              alt=""
+              width="270"
+              height="360"
+            />
+          </li>
+        </ul>
+      </section>
     </main>
 
-    <!-- подвал сайта -->
-    <footer></footer>
+    <footer>
+      <!-- онлайн запись -->
+      <section></section>
 
-    <a href="https://ninjamock.com/" target="_blank">Web site</a>
+      <!-- Контакты -->
+      <section>
+        <address>
+          <a href="https://goo.gl/maps/4fN2dJfjmfYPF8mr8" target="_blank">ул. Васильковая, 7А
+          Киев, 08132</a>
+          <a href="tel"+380441111111">+38 044 111 11 11</a>
+          <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+        </address>
+      </section>
 
-    <br />
-
-    <!-- абсолютный путь к файлу -->
-    <img
-      src="https://images.pexels.com/photos/4818188/pexels-photo-4818188.jpeg"
-      alt=""
-      width="500"
-    />
-
-    <br />
-    <!-- относительынй путь к файлу -->
-    <img src="./pictures/pic.jpeg" alt="aircraft" width="500" />
-
-    <!-- блочный элемент -->
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <hr />
-
-    <!-- строчный элемент span a img-->
-    <span>1</span>
-    <span>2</span>
-    <span>3</span>
+      <!-- Самый низ -->
+      <section>
+        <p>&#169; Copyright 2020</p>
+        <ul>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Youtube</a></li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
